build: implement websocket for showtime-seat status